# technical-challenge-hybrid-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_ops.pckl
fixtures/: annex_a_schema.sql  annex_b_fn_saldo_cliente.sql  annex_c_sp_atualizar_status_contas_inativas.sql  annex_d_sp_transferir_entre_contas.sql  annex_e_sp_processar_lote_taxas.sql  annex_f_sp_relatorio_mensal_cliente.sql
outputs/: annex_b_fn_saldo_cliente.py  annex_b_fn_saldo_cliente_report.json  annex_c_sp_atualizar_status_contas_inativas.py  annex_c_sp_atualizar_status_contas_inativas_report.json  annex_d_sp_transferir_entre_contas.py  annex_d_sp_transferir_entre_contas_report.json  annex_e_sp_processar_lote_taxas.py  annex_e_sp_processar_lote_taxas_report.json  annex_f_sp_relatorio_mensal_cliente.py  annex_f_sp_relatorio_mensal_cliente_report.json
scripts/: init_db.py  init_db.sql  run_fixtures.py
src/hybrid_pipeline/: __init__.py  config.py
src/hybrid_pipeline/api/: app.py  schemas.py
src/hybrid_pipeline/graph/: build.py  nodes.py  state.py
src/hybrid_pipeline/metrics/: evaluation.py
src/hybrid_pipeline/persistence/: db.py  repository.py
src/hybrid_pipeline/pipeline/: analysis.py  generation.py  parsing.py  validation.py
tests/: test_analysis.py  test_api.py  test_graph.py  test_parsing.py  test_validation.py
