[project]
name = "hybrid-pipeline"
version = "0.1.0"
description = "Pipeline híbrido PL/pgSQL → Python 3.14 (LangGraph)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "sqlglot>=25.0.0",
    "sqlparse>=0.5.0",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "langgraph-cli[inmem]>=0.1.0",
]

[project.optional-dependencies]
langfuse = ["langfuse>=2.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hybrid_pipeline"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
